# renard

./: .bumpversion.cfg  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
renard/: __init__.py  cli.py  eng.py  renard.py
src/renard/: __init__.py  __main__.py  version.py
test/: test_cli.py  test_eng_string.py  test_renard.py
tests/: .coveragerc  test_cli.py  test_renard.py
