[metadata]
name = renard
version = attr: renard.__version__
description = Working with the Renard series of preferred numbers specified in ISO 3
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/rob-smallshire/renard
author = Robert Smallshire
author_email: robert+renard@smallshire.org.uk
keywords = engineering preferred-numbers
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =
    docopt_subcommands>=4.0

[options.entry_points]
console_scripts =
    executable-name = renard.cli:main

[options.extras_require]
dev = bumpversion
doc = sphinx
test = pytest; pytest-cov; hypothesis; tox

[options.packages.find]
where = src
